<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kstech.nexecheck.activity.LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:background="#003c65"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_logo_zheng" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#f2741b" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.2"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_to_xml_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/login_left" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/login_right_bg"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/userNameLy"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:background="@drawable/rect_gray"
                android:paddingTop="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/login_user" />

                <TextView
                    android:id="@+id/userNameET"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:focusableInTouchMode="false"
                    android:text="@string/userName"
                    android:textColor="#999999"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/login_spindow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_gray"
                android:paddingBottom="10dp"
                android:paddingTop="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/login_pwd" />

                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:background="#ffffff"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="numberPassword"
                    android:text="111111"
                    android:textColor="#999999"
                    android:textColorHint="#999999"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/checkLineLy"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_gray"
                android:paddingTop="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/login_check" />

                <TextView
                    android:id="@+id/checkLineET"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:text="@string/checkLine"
                    android:textColor="#999999"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/login_spindow" />
            </LinearLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_btn"
                android:text="@string/loginButton"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/app_foot_version"
            android:textColor="#333333"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
